# XLifelineAI

./: README.md  pyproject.toml
docs/: architecture.md  index.html
docs/demo/: resurrection_report.html
docs/simulator/: graph.css  index.html  simulator.js
examples/: agent_guard_demo.py  agent_resume_demo.py  corruption_demo.py  resurrection_demo.py  self_heal_demo.py
tests/: test_fragment_rebuild.py
xlifeline/: __init__.py  service.py
xlifeline/adapters/: agent_state.py  chat_memory.py
xlifeline/api/: rest_server.py
xlifeline/cli/: main.py  xlifeline_cli.py
xlifeline/core/: chaos_engine.py  continuity_engine.py  fragment_engine.py  integrity.py  manifest_graph.py  rebuild_engine.py  self_heal.py  semantic_repair.py
xlifeline/model/: base.py  mock_model.py
xlifeline/runtime/: __init__.py  app.py  commands.py  metrics.py
xlifeline/storage/: base_store.py  local_store.py  memory_store.py
xlifeline/visual/: fragment_graph.py
