[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xlifelineai"
version = "0.1.0"
description = "Resilient memory for AI systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Raaj Mandale" }
]
keywords = ["ai", "memory", "resilience", "recovery", "fragmentation", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Archiving :: Backup"
]
dependencies = []

[project.scripts]
xlifeline = "xlifeline.cli.xlifeline_cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["xlifeline*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
